# julep-iced

./: CHANGELOG.md  Cargo.toml  LICENSE  README.md  justfile
.github/workflows/: build.yml  check.yml  document.yml
beacon/: Cargo.toml
core/: Cargo.toml
core/src/: renderer.rs
core/src/theme/: palette.rs
core/src/widget/: id.rs
core/src/widget/operation/: accessible.rs  focusable.rs
cryoglyph/: Cargo.toml
cryoglyph/src/: error.rs  text_render.rs
debug/: Cargo.toml
devtools/: Cargo.toml
docs/: a11y-internals-guide.md  a11y-widget-guide.md  keyboard-navigation.md
examples/integration/src/: main.rs
examples/layout/: Cargo.toml
examples/modal/src/: main.rs
examples/multi_window/: Cargo.toml
examples/vectorial_text/: Cargo.toml
futures/: Cargo.toml
graphics/: Cargo.toml
graphics/src/: cache.rs  compositor.rs  geometry.rs
graphics/src/geometry/: frame.rs
highlighter/: Cargo.toml
program/: Cargo.toml
renderer/: Cargo.toml
renderer/src/: lib.rs
runtime/: Cargo.toml
runtime/src/: keyboard.rs
runtime/src/widget/: operation.rs
selector/: Cargo.toml
src/: lib.rs
test/: Cargo.toml
test/src/: lib.rs  simulator.rs
tester/: Cargo.toml
tiny_skia/: Cargo.toml
wgpu/: Cargo.toml
widget/: Cargo.toml
widget/src/: button.rs  canvas.rs  checkbox.rs  combo_box.rs  pane_grid.rs  pick_list.rs  progress_bar.rs  qr_code.rs  radio.rs  shader.rs  slider.rs  text_editor.rs  text_input.rs  toggler.rs  tooltip.rs  vertical_slider.rs
widget/src/canvas/: program.rs
widget/src/overlay/: menu.rs
winit/: Cargo.toml
winit/src/: a11y.rs  lib.rs  window.rs
winit/src/window/: state.rs
