[package]
name = "julep-iced-devtools"
description = "Vendored fork of iced_devtools for Julep -- Attachable developer tools for any iced program"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
categories.workspace = true
keywords.workspace = true
rust-version.workspace = true

[lib]
name = "iced_devtools"

[lints]
workspace = true

[features]
time-travel = ["iced_program/time-travel"]

[dependencies]
iced_debug.workspace = true
iced_widget.workspace = true
log.workspace = true

iced_program.workspace = true
iced_program.features = ["debug"]
