[package]
name = "plushie-iced-highlighter"
description = "Vendored fork of iced_highlighter for Plushie UI -- A syntax highlighter for iced"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
categories.workspace = true
keywords.workspace = true

[lib]
name = "iced_highlighter"

[lints]
workspace = true

[dependencies]
iced_core.workspace = true

two-face.workspace = true
