[package]
name = "julep-iced-program"
description = "Vendored fork of iced_program for Julep -- The definition of an iced program"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
categories.workspace = true
keywords.workspace = true
rust-version.workspace = true

[lib]
name = "iced_program"

[lints]
workspace = true

[features]
a11y = ["iced_runtime/a11y"]
debug = []
time-travel = []

[dependencies]
iced_graphics.workspace = true
iced_runtime.workspace = true
