[package]
name = "julep-iced-tester"
description = "Vendored fork of iced_tester for Julep UI -- A test recorder, editor, and runner for your iced applications"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
categories.workspace = true
keywords.workspace = true
rust-version.workspace = true

[dependencies]
iced_test.workspace = true
iced_widget.workspace = true
log.workspace = true
rfd.workspace = true

[lib]
name = "iced_tester"

[lints]
workspace = true
